--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Disappearing Ninjas</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Disappearing Ninjas</h1>
+    <img src="/disappearing-ninjas.png" alt="A picture of the wireframe of the disappearing-ninjas assignment.">
+    <img src="/disappearing-ninjas.png" alt="A picture of the wireframe of the disappearing-ninjas assignment.">
+    <img src="/disappearing-ninjas.png" alt="A picture of the wireframe of the disappearing-ninjas assignment.">
+    <img src="/disappearing-ninjas.png" alt="A picture of the wireframe of the disappearing-ninjas assignment.">
+    <img src="/disappearing-ninjas.png" alt="A picture of the wireframe of the disappearing-ninjas assignment.">
+    <img src="/disappearing-ninjas.png" alt="A picture of the wireframe of the disappearing-ninjas assignment.">
+    <img src="/disappearing-ninjas.png" alt="A picture of the wireframe of the disappearing-ninjas assignment.">
+    <img src="/disappearing-ninjas.png" alt="A picture of the wireframe of the disappearing-ninjas assignment.">
+    <button>Restore</button>
 </body>
 </html>
